fix overflow projectlist sidebar

--- a/public/css/card.css
+++ b/public/css/card.css
@@ -30,6 +30,7 @@
 .card {
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.5);
     width: 400px;
+    overflow-x: hidden;
     min-height: 400px;
     margin-left: 20px;
     margin-top: 20px;
